typescript/checker/tests/conformance/decorators/class/accessor/decoratorOnClassAccessor6.ts.stderr
error: Unexpected token Some(At)
 --> $DIR/tests/conformance/decorators/class/accessor/decoratorOnClassAccessor6.ts:6:12
  |
6 |     public @dec set accessor(value: number) { }
  |            ^

